tests/baselines/reference/aliasesInSystemModule2.errors.txt
tests/cases/compiler/aliasesInSystemModule2.ts(1,21): error TS2307: Cannot find module 'foo' or its corresponding type declarations.


==== tests/cases/compiler/aliasesInSystemModule2.ts (1 errors) ====
    import {alias} from "foo";
                        ~~~~~
!!! error TS2307: Cannot find module 'foo' or its corresponding type declarations.
    import cls = alias.Class;
    export import cls2 = alias.Class;
    
    let x = new alias.Class();
    let y = new cls();
    let z = new cls2();
    
    module M {
      export import cls = alias.Class;
      let x = new alias.Class();
      let y = new cls(); 
      let z = new cls2();
    }